forms | rework tags to identify if the tag is a collection and object/primitive
